# asset-library

./: .gitattributes  .gitignore  PLANNING.md  TDD.md  pyproject.toml
archetypes/bar_soap_box/: archetype.yaml
archetypes/pump_bottle/: archetype.yaml
assets/safeguard/safeguard-bar-soap-fresh-clean-aloe/: manifest.yaml
assets/safeguard/safeguard-bar-soap-fresh-clean-aloe/materials/: master.mtlx
assets/safeguard/safeguard-liquid-hand-soap-lavender/: manifest.yaml
assets/safeguard/safeguard-liquid-hand-soap-lavender/geo/: base.usdz  base_clean.glb  base_clean.mtl  base_final.glb  base_final.mtl  base_textured.glb
assets/safeguard/safeguard-liquid-hand-soap-lavender/materials/: master.mtlx
schemas/: manifest.schema.json
scripts/: bottle_materials.py  texture_project.py  uv_cleanup.py
src/assetlib/: cli.py  constants.py  errors.py  manifest.py  materialx.py  validator.py
tests/: conftest.py  test_materialx.py  test_validator.py
viewer/: index.html
